Update HR Final Queries.ipynb

--- a/HR Final Queries.ipynb
+++ b/HR Final Queries.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "`%load_ext sql`\n",
     "\n",
-    "`%sql postgresql://username:password@host:port/database_name`"
+    "`%sql mysql://username:password@host:port/database_name`"
    ]
   },
   {
